# mscales

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  _version.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sound.py  test.mid
docs/: Makefile  make.bat  requirements.txt
docs/source/: basic.rst  conf.py  index.rst  installation.rst  pcsets.rst  quickstart.rst  release-history.rst  scales.rst  usage.rst
docs/source/_static/: example_scale.mid
docs/source/pyplots/: example-scale-barcode.py  example-scale-bars.py  example-scale-polar.py
mscales/: __init__.py  _version.py  basic.py  concepts.py  nrt.py  pc-sets.py  pcsets.py  plots.py  pyvenv.cfg  scales.py  sound.py  test_normal_form.py  utils.py
mscales/tests/: test_examples.py
tests/: test_examples.py
