[tool.poetry]
name = "mscales"
version = "1.4.1"
description = "A Python package to generate, visualize, and sonify musical scales."
authors = ["Fabian C. Moss <fabianmoss@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pretty_midi = "^0.2.10"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
